# CMakeTest

./: CMakeLists.txt  README.md
myLib/: CMakeLists.txt  myLib.cpp  myLib.h
src/: CMakeLists.txt  main.cpp  test  test.cpp
